testsuite/tests/properties/invalid_no/correct/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun prop(): Entity[FooNode] = null[Entity[FooNode]]
}
